# main

./: .editorconfig  .gitignore  Cargo.toml  README.md
infrastructure/: docker-compose.yml
infrastructure/grafana/: grafana.ini
infrastructure/grafana/provisioning/dashboards/: dashboard.yml  dashboards.json  maintenance.json  nexus.json  victoriametrics.json
infrastructure/grafana/provisioning/datasources/: datasource.yml
infrastructure/prometheus/: prometheus.yml
scripts/: create-environment.py
src/: 404.tmpl  content.json  index.tmpl  main.rs  main.webmanifest  script.js  script.min.js  style.css
