[package]
name = "main"
version = "0.1.0"
authors = ["Alexander Shelepenok <alxshelepenok@gmail.com>"]
description = "Service infrastructure and content for the personal website"
license = "MIT"
edition = "2021"

[dependencies]
tera = "1.19.0"
lazy_static = "1.4.0"
serde_json = "1.0.96"
base64 = "0.21.2"
minify-html = "0.15.0"
